tests/dataset/tpc-ds/compiler/c/q96.error
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c:168:3: error: unknown type name ‘household_demographics_t’
  168 |   household_demographics_t *data;
      |   ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c: In function ‘create_household_demographics_list’:
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c:173:31: error: ‘household_demographics_t’ undeclared (first use in this function); did you mean ‘household_demographic_t’?
  173 |   l.data = calloc(len, sizeof(household_demographics_t));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~
      |                               household_demographic_t
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c:173:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c:244:28: warning: implicit declaration of function ‘store_sale_list_t_create’ [-Wimplicit-function-declaration]
  244 |   store_sale_list_t tmp1 = store_sale_list_t_create(
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c:245:18: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  245 |       store_sales.len * household_demographics.len * time_dim.len * store.len);
      |                  ^
      |                  ->
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c:245:47: error: ‘(household_demographic_t *)&household_demographics’ is a pointer; did you mean to use ‘->’?
  245 |       store_sales.len * household_demographics.len * time_dim.len * store.len);
      |                                               ^
      |                                               ->
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c:245:62: error: ‘(time_dim_t *)&time_dim’ is a pointer; did you mean to use ‘->’?
  245 |       store_sales.len * household_demographics.len * time_dim.len * store.len);
      |                                                              ^
      |                                                              ->
/tmp/TestCCompiler_TPCDS_Goldenq96634269667/001/prog.c:245:74: error: ‘(store_t *)&store’ is a pointer; did you mean to use ‘->’?
  245 |       store_sales.len * household_demographics.len * time_dim.len * store.len);
      |                                                                          ^
      |                                                                          ->
